# yieldsensei

./: .gitignore  .replit  README.md  app.py  auth.py  bot_handlers.py  build_css.js  config.py  main.py  minimal.py  models.py  package-lock.json  package.json  pyproject.toml  replit.nix  tailwind.config.js  test_app.py  test_data.json  test_technical_analysis.py  wsgi.py
attached_assets/: Pasted--Prompt-for-Implementing-Yield-Sensei-s-Telegram-AI-Bot-on-Replit-Objective--1739471890952.txt  Pasted--Prompt-for-Replit-Building-a-YieldSensei-Web-Dashboard-Application-GOAL-I-need--1740327877558.txt  Pasted--YieldSensei-Technical-Documentation-System-Overview-YieldSensei-is-a-dual-interface-crypto--1740413158789.txt  Pasted-YieldSensei-Technical-Documentation-System-Overview-YieldSensei-is-a-dual-interface-crypto-analyti-1740060140685.txt
models/: prophet_model_bitcoin.joblib  prophet_model_doge.joblib  prophet_model_solana.joblib  rf_model.joblib  rf_model_bitcoin.joblib  rf_model_doge.joblib  rf_model_solana.joblib  scaler.joblib  scaler_bitcoin.joblib  scaler_doge.joblib  scaler_solana.joblib
services/: birdeye_service.py  coingecko_service.py  crypto_analysis.py  crypto_api.py  dexscreener_service.py  firebase_service.py  free_crypto_service.py  ml_prediction_service.py  openai_service.py  sentiment_service.py  technical_analysis.py  token_service.py
static/: app.js  styles.css
static/js/: app.js  (+1 more)
templates/: base.html  dashboard.html  documentation.html  error.html  glossary.html  index.html  quiz.html  quiz_questions.html  quiz_results.html  telegram.html
utils/: cache.py  rate_limiter.py
(+15 files in other folders)
