[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "cachetools>=5.5.1",
    "firebase-admin>=6.6.0",
    "numpy>=2.2.3",
    "openai>=1.0.0",
    "pandas>=2.2.3",
    "python-telegram-bot[job-queue]>=20.0",
    "requests>=2.32.3",
    "ta>=0.11.0",
    "telegram>=0.0.1",
    "twilio>=9.4.5",
]
