[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "asgiref>=3.8.1",
    "cachetools>=5.5.1",
    "firebase-admin>=6.6.0",
    "flask-compress>=1.17",
    "flask-limiter>=3.10.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-talisman>=1.1.0",
    "flask-wtf>=1.2.2",
    "flask[async]>=3.1.0",
    "numpy>=2.2.3",
    "oauthlib>=3.2.2",
    "openai>=1.0.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot[job-queue]>=20.0",
    "requests>=2.32.3",
    "ta>=0.11.0",
    "telegram>=0.0.1",
    "twilio>=9.4.5",
]
